# game-of-life

./: .gitignore  Cargo.toml  README.md  project-words.txt
.cargo/: config.toml
.github/workflows/: publish_crate.yml  test.yml
src/: app.rs  cell.rs  cell_coordinates.rs  cell_position.rs  cell_row.rs  cell_state.rs  game.rs  grid.rs  grid_printer.rs  grid_size.rs  grid_traverser.rs  lib.rs  main.rs  output.rs  settings.rs
src/application/: app.rs
src/cell/: coordinates.rs  mod.rs  row.rs  state.rs
src/domain/: game.rs  mod.rs  settings.rs  timer.rs
src/domain/cell/: coordinates.rs  mod.rs  row.rs  state.rs
src/domain/grid/: mod.rs  traverser.rs
src/domain/grid/functions/: mod.rs  next_generation.rs  overlap.rs
src/domain/output/: logger.rs  mod.rs  printer.rs
src/grid/: mod.rs  size.rs  traverser.rs
src/grid/functions/: next_generation.rs  overlap.rs
src/grid/patterns/: glider.rs  mod.rs
src/grid/patters/: glider.rs
src/grid_functions/: mod.rs  next_generation.rs  overlap.rs  render.rs
src/infrastructure/: console.rs  thread.rs
src/patters/: glider.rs  mod.rs
src/ui/: console.rs  help.rs  mod.rs
tests/: integration_test.rs
tests/fixtures/: expected_output.txt  glider.txt
