[package]
name = "game_of_life_kata"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Jose Celano <josecelano@gmail.com>"]
description = "A Conway's Game of Life kata in Rust"
repository = "https://github.com/josecelano/game-of-life"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-colorizer = "1.0.0"
